--- a/app/src/main/res/layout/item_demo.xml
+++ b/app/src/main/res/layout/item_demo.xml
@@ -18,6 +18,7 @@
 
     <TextView
         android:id="@+id/demoNameText"
+        android:layout_weight="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="demo item"/>
