--- a/app/src/main/res/layout/fragment_first_demo.xml
+++ b/app/src/main/res/layout/fragment_first_demo.xml
@@ -1,21 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.FirstDemoFragment">
+    tools:context=".ui.login.FirstDemoFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        android:text="hello blank fragment" />
+        android:paddingTop="50dp"
+        android:text="hello blank fragment"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnToSecond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="ToSecond" />
+        android:text="ToSecond"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/loginEdUserName"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="user"
+        app:layout_constraintBottom_toTopOf="@+id/loginEdPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/loginEdPassword"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="pass"
+        app:layout_constraintBottom_toTopOf="@+id/btnToSecond"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textPassword"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
